--- a/i3status.conf
+++ b/i3status.conf
@@ -1,10 +1,3 @@
-####################################################################
-  # File Name: i3status.conf
-  # Purpose: Configure the i3 tiled WM status bar
-  # Creation Date: 03-01-2016
-  # Last Modified: Sun Jun 25 13:06:20 PDT 2017
-  # Created By: Ivan Guerra <Ivan.E.Guerra-1@ou.edu>
-####################################################################
 general {
         colors = true
         color_good = "#00FF00"
@@ -21,36 +14,40 @@ order += "battery 1"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "  %essid (<i>%bitrate</i>)"
-        format_down = "Disconnected"
+        format_up = "%essid(<i>%bitrate</i>)"
+        format_down = "disconnected"
 }
 
 volume master {
-        format = "  %volume"
-        format_muted = " %volume"
+        format = "vol:%volume"
+        format_muted = "muted"
         device = "default"
         Mixer = "Master"
         mixer_idx = 0
 }
 
 cpu_usage {
-        format = " %usage"
-        degraded_threshold = 75
-        max_threshold = 90
-	format_above_degraded_threshold = "Warning above degraded threshold: %usage"
-	format_above_threshold = "Warning above threshold: %usage"
+  format = "cpu:%usage"
+  degraded_threshold = 75
+  max_threshold = 90
+  format_above_degraded_threshold = "high cpu usage: %usage"
+  format_above_threshold = "warning, above threshold: %usage"
 }
 
 battery 1 {
-        format = " %percentage"
-        format_down = "  No battery"
+        format = "%status%percentage"
+        format_down = "no battery"
+        status_chr = "CHR:"
+        status_bat = "BAT:"
+        status_unk = "UNK:"
         low_threshold = 15
-        threshold_type = "percentage"
-        last_full_capacity = true
+        threshold_type = "%percentage"
+        last_full_capacity = false
         integer_battery_capacity = true
+        path = "/sys/class/power_supply/BAT1/uevent"
 }
 
 tztime local {
-       format = "<span foreground='#ff4040'>%time</span>"
+       format = "<span foreground='#79CDCD'>%time</span>"
        format_time = "%m-%d-%Y %I:%M"
 }
