--- a/config
+++ b/config
@@ -1,27 +1,21 @@
-####################################################################
-  # File Name: config
-  # Purpose: Configure the i3 tiled window manager
-  # Creation Date: 03-01-2016
-  # Last Modified: Sun Jun 25 12:19:05 PDT 2017
-  # Created By: Ivan Guerra <Ivan.E.Guerra-1@ou.edu>
-####################################################################
-
 # Basic settings
 set $mod Mod4
 floating_modifier $mod
 hide_edge_borders both
 
 # Programs executed on startup.
-exec_always compton --backend glx -fcC
-exec_always feh --bg-scale /home/ieg/pictures/abstract.jpg
+exec_always compton --backend glx -cC
+exec_always feh --bg-scale /home/ieg/pictures/pent.jpg
 
 # Machine state controls.
 bindsym $mod+F4 exec sudo shutdown -h now
 bindsym $mod+F5 exec sudo shutdown -r now
 
 # Volume controls.
-bindsym XF86AudioRaiseVolume exec amixer set Master 5+
-bindsym XF86AudioLowerVolume exec amixer set Master 5-
+bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master 5%+
+bindsym $mod+Up exec amixer -D pulse sset Master 5%+
+bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master 5%-
+bindsym $mod+Down exec amixer -D pulse sset Master 5%-
 
 # Screen brightness controls.
 bindsym XF86MonBrightnessUp exec xbacklight +10
@@ -30,14 +24,13 @@ bindsym XF86MonBrightnessDown exec xbacklight -10
 # i3 configuration controls.
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3? This will end your X session.' -b 'Yes' 'i3-msg exit'"
 
 # Application launch shortcuts.
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+d exec dmenu_run
 bindsym $mod+b exec chromium
-bindsym $mod+g exec emacs
-bindsym $mod+z exec i3lock -c "$bg-color"
+bindsym --release $mod+z exec "slock"
 
 # Window focus controls.
 bindsym $mod+Shift+q kill
@@ -46,12 +39,6 @@ bindsym $mod+semicolon focus right
 bindsym $mod+l focus up
 bindsym $mod+k focus down
 bindsym $mod+a focus parent
-
-# Focused window movement controls.
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+semicolon move right
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+k move down
 
 # Focused window movement controls (using arrow keys).
 bindsym $mod+Shift+Left move left
@@ -73,19 +60,14 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
-# Workspace name variables.
-set $workspace1 ""
-set $workspace2 ""
-set $workspace3 ""
-
 # Workspace controls.
 bindsym $mod+Left workspace prev_on_output
 bindsym $mod+Right workspace next_on_output
 
 # Switch to workspace.
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -95,9 +77,9 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # Move focused container to workspace.
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
@@ -147,7 +129,7 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Terminus 9
+font pango: Source Code Pro Medium 11
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available).
@@ -155,8 +137,8 @@ bar {
     # Using custom i3 status bar config file (see <i3status.conf>).
     status_command i3status -c ~/.i3/i3status.conf
 
-    # Set the bar font. Make sure to include Awesome if you want to use FontAwesome icons.
-    font pango: Awesome, Terminus 9
+    # Set the bar font.
+    font pango: Source Code Pro 10
 
    # Setup the bar colors.
    colors {
